--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,15 +12,15 @@ edition = "2021"
 [dependencies]
 reqwest = { version = "0.11", features = ["blocking"] }
 indicatif = "0.17"
-clap = { version = "4.1", features = ["derive"] }
+clap = { version = "4.5", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 console = "0.15"
 log = "0.4"
-env_logger = "0.10"
+env_logger = "0.11"
 sha2 = "0.10"
 url = "2.2"
 glob = "0.3"
-git2 = "0.16"
+git2 = "0.18"
 serde_json = "1.0"
 thiserror = "1.0"
 tokio = { version = "1.25", features = ["full"] }
@@ -35,6 +35,7 @@ futures-util = "0.3"
 futures = "0.3"
 walkdir = "2.3"
 toml_edit = {version = "0.14", features = ["easy"] }
+crate-deps = { git = "https://github.com/shareef12/crate-deps.git", version = "0.1.2" }
 
 [features]
 default = []
